--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@
 
 .Navbar-items {
   font-size: 3em;
+  padding: 20px;
 }
 
 .App-header {
@@ -45,13 +46,35 @@
 }
 
 .datares-header {
-  min-height: 50vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: left;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   text-align: left;
+}
+
+.intro-header {
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  text-align: left;
+}
+
+.datablog-header {
+  min-height: 50vh;
+  margin-top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  text-align: left;
+  color: white;
 }
 
 .Stats-header {
@@ -61,7 +84,6 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  background-color: #47A4B8;
   color: white;
 }
 
