--- a/src/App.css
+++ b/src/App.css
@@ -66,8 +66,7 @@
 }
 
 .datablog-header {
-  min-height: 50vh;
-  margin-top: 0;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: left;
@@ -75,6 +74,32 @@
   font-size: calc(10px + 2vmin);
   text-align: left;
   color: white;
+}
+
+.research-header {
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  text-align: left;
+  color: black;
+}
+
+.contribute-header {
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  text-align: center;
+  color: black;
+}
+
+.contribute-header-description {
+  margin-top: 5%;
 }
 
 .Stats-header {
@@ -96,8 +121,7 @@
 }
 
 .Footer {
-  min-height: 35vh;
-  margin-top: 2%;
+  min-height: 30vh;
   justify-content: center;
   font-size: 2vmin;
 }
