--- a/src/Styles/Consulting.css
+++ b/src/Styles/Consulting.css
@@ -1,6 +1,5 @@
 .Title {
     font-size: 3em;
-    text-align: right;
-    margin-right: 10%;
-    padding-bottom: '5%';
+    text-align: left;
+    margin-top: 5%;
 }
