--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -138,6 +138,12 @@
     font-weight: bold;
 }
 
+.Social-media-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media only screen and (max-width: 900px){
     .Stat-Number {
         font-size: 2em;
@@ -153,5 +159,22 @@
         color: white;
         text-align: center;
         font-weight: bold;
+    }
+
+    .Social-media-icons {
+        padding-top: 50%;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+    }
+
+    .Logo-alignment {
+        padding-top: 20%;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .Logo-alignment {
+        padding-top: 25%;
     }
 }
