--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -178,3 +178,9 @@
         padding-top: 25%;
     }
 }
+
+@media only screen and (max-width: 1366px) {
+    .Logo-alignment {
+        padding-top: 1%;
+    }
+}
