--- a/src/Styles/Team.css
+++ b/src/Styles/Team.css
@@ -3,3 +3,19 @@
     text-align: left;
     margin-left: 5%;
 }
+
+.Segment-alignment {
+    margin: 1.5%;
+}
+
+@media only screen and (max-width: 900px) {
+    .Segment-alignment {
+        margin: 1.5%;
+    }
+} 
+
+@media only screen and (max-width: 1366px) {
+    .Segment-alignment {
+        margin: 0.5%;
+    }
+} 
