--- a/src/Styles/DataBlog.css
+++ b/src/Styles/DataBlog.css
@@ -13,3 +13,12 @@
     justify-content: center;
     text-align: left;
 }
+
+.card-body {
+    margin: 5%;
+}
+
+.segment-body {
+    width: 100%;
+    height: 100%;
+}
