--- a/src/Styles/Research.css
+++ b/src/Styles/Research.css
@@ -10,3 +10,12 @@
     text-align: right;
     padding-bottom: 5%;
 }
+
+.card-body {
+    margin: 5%;
+}
+
+.segment-body {
+    width: 100%;
+    height: 100%;
+}
