--- a/src/Styles/Consulting.css
+++ b/src/Styles/Consulting.css
@@ -3,3 +3,12 @@
     text-align: left;
     margin-top: 5%;
 }
+
+.card-body {
+    margin: 5%;
+}
+
+.segment-body {
+    width: 100%;
+    height: 100%;
+}
